# QWidgetDemo

./: .gitignore  LICENSE  QWidgetDemo.pro  README.md
3rd_qextserialport/: 3rd_qextserialport.pri
3rd_qhotkey/: 3rd_qhotkey.pri  qhotkey.cpp  qhotkey.h  qhotkey_mac.cpp  qhotkey_p.h  qhotkey_win.cpp
3rd_qxtglobalshortcut/: 3rd_qxtglobalshortcut.pri  qxtglobalshortcut.cpp  qxtglobalshortcut.h  qxtglobalshortcut_p.h  qxtglobalshortcut_win.cpp  qxtwindowsystem.cpp  qxtwindowsystem_mac.cpp  qxtwindowsystem_mac.h  qxtwindowsystem_x11.cpp
3rd_smtpclient/: 3rd_smtpclient.pri  mimeattachment.cpp  mimefile.cpp  mimefile.h  mimemessage.cpp  mimemultipart.cpp  mimepart.cpp  mimetext.cpp  smtpclient.h  smtpmime.h
Video/: Video.pro  default.h  main.cpp  widget.cpp  widget.h  widget.ui
astackwidget/: astackwidget.cpp  astackwidget.h  astackwidget.pro  frmastackwidget.cpp  frmastackwidget.h  frmastackwidget.ui  main.cpp
base64/: base64.cpp  base64.pro  frmbase64.cpp  frmbase64.h  frmbase64.ui  main.cpp
base64helper/: base64helper.pro  main.cpp
battery/: battery.cpp  battery.h  battery.pro  frmbattery.cpp  frmbattery.h  frmbattery.ui  main.cpp
bgdemo/: bgdemo.pro  rc.qrc  widget.cpp  widget.ui
buttondefence/: buttondefence.cpp  buttondefence.h  buttondefence.pro  frmbuttondefence.cpp  frmbuttondefence.h  frmbuttondefence.ui  main.cpp  main.qrc
colorwidget/: colorwidget.cpp  colorwidget.h  colorwidget.pro  frmcolorwidget.cpp  frmcolorwidget.h  frmcolorwidget.ui  main.cpp
comtool/: comtool.pro  head.h  main.cpp  readme.txt
control/: control.pro
core_common/: appinit.cpp  appinit.h  base64.h  common.qrc  core_common.pri  h3.pri  quihelper.cpp  quihelper.h
core_frameless/: core_frameless.pri  framelessdialog.cpp  framelessdialog.h  framelessmainwindow.cpp  framelesswidget.cpp  framelesswidget.h
core_qui/: core_qui.pri  iconfont.cpp  iconfont.h  iconhelper.cpp  iconhelper.h  quiconfig.cpp  quiconfig.h  quidateselect.cpp  quidateselect.h  quihead.h  quihelper.cpp  quihelper.h  quiinputbox.cpp  quiinputbox.h  quimessagebox.cpp  quimessagebox.h  quistyle.cpp  quistyle.h  quitipbox.cpp  quitipbox.h  quiwidget.cpp  quiwidget.h
countcode/: countcode.pro  frmcountcode.cpp
dbpage/: TA.db  dbpage.cpp  dbpage.h  dbpage.pro  frmdbpage.cpp  frmdbpage.ui  head.h  main.cpp
designer/: designer.pro  main.rc  readme.md  readme.txt
devicebutton/: devicebutton.cpp  devicebutton.h  devicebutton.pro  frmdevicebutton.cpp  frmdevicebutton.ui  main.cpp  main.qrc
devicesizetable/: devicesizetable.cpp  devicesizetable.h  devicesizetable.pro  frmdevicesizetable.cpp  frmdevicesizetable.h  frmdevicesizetable.ui  main.cpp
docs/: examples.js  index.html  iotsystem.html  video_system.html
echartgauge/: echartgauge.pro  readme.txt  widget.cpp  widget.h
email/: email.pro  frmemailtool.cpp  frmemailtool.ui  main.cpp
emailtool/: emailtool.pro  frmemailtool.h  frmemailtool.ui  main.cpp  sendemailthread.cpp
ffmpegdemo/: ffmpegdemo.pro  main.cpp  readme.md  readme.txt  widget.cpp  widget.ui
flatui/: flatui.cpp  flatui.h  flatui.pro  frmflatui.cpp  frmflatui.h  frmflatui.ui  main.cpp
frameless/: frameless.pro  head.h  main.cpp  readme.md
framelesswidget/: framelesswidget.cpp  framelesswidget.h  framelesswidget.pro  framelesswidget2.cpp  framelesswidget2.h  frmframelesswidget.cpp  frmframelesswidget.h  frmframelesswidget.ui  main.cpp
gifwidget/: frmgifwidget.cpp  frmgifwidget.h  frmgifwidget.ui  gif.h  gifwidget.cpp  gifwidget.h  gifwidget.pro  main.cpp
hotkey/: frmhotkey.cpp  hotkey.pro  main.cpp
imagecropper/: imagecropper.pro
imageswitch/: frmimageswitch.cpp  frmimageswitch.h  frmimageswitch.ui  imageswitch.cpp  imageswitch.h  imageswitch.pro  main.cpp  main.qrc
imageviewwindow/: graphicspixmap.cpp  graphicspixmap.h  graphicsview.cpp  graphicsview.h  imageviewwindow.cpp  imageviewwindow.h  imageviewwindow.pro  imageviewwindow.qrc  imageviewwindow.ui  main.cpp
ipaddress/: frmipaddress.cpp  frmipaddress.h  frmipaddress.ui  ipaddress.cpp  ipaddress.h  ipaddress.pro  main.cpp
key/: key.pro
lightbutton/: frmlightbutton.cpp  frmlightbutton.h  frmlightbutton.ui  lightbutton.cpp  lightbutton.h  lightbutton.pro  main.cpp
lineeditnext/: lineeditnext.pro  widget.ui
live/: live.pro
lunarcalendarwidget/: frmlunarcalendarwidget.h  frmlunarcalendarwidget.ui  (+9 more)
third/3rd_qwt/: CMakeLists.txt  qwt_abstract_slider.cpp  qwt_analog_clock.cpp  qwt_arrow_button.cpp  qwt_clipper.cpp  qwt_compass_rose.cpp  qwt_counter.cpp  qwt_date.cpp  qwt_date_scale_draw.cpp  qwt_date_scale_engine.cpp  qwt_dial.cpp  qwt_dial_needle.cpp  qwt_dyngrid_layout.cpp  qwt_event_pattern.cpp  qwt_graphic.cpp  qwt_knob.cpp  qwt_legend.cpp  qwt_legend_label.cpp  qwt_magnifier.cpp  qwt_painter.cpp  qwt_painter_command.h  qwt_picker.cpp  qwt_plot.cpp  qwt_plot_barchart.cpp  qwt_plot_canvas.cpp  qwt_plot_canvas.h  qwt_plot_curve.cpp  qwt_plot_curve.h  qwt_plot_dict.cpp  qwt_plot_directpainter.cpp  qwt_plot_directpainter.h  qwt_plot_item.cpp  qwt_plot_item.h  qwt_plot_layout.cpp  qwt_plot_layout.h  qwt_plot_legenditem.cpp  qwt_plot_multi_barchart.cpp  qwt_plot_panner.cpp  qwt_plot_picker.cpp  qwt_plot_rasteritem.cpp  (+14 more)
(+1931 files in other folders)
